<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/img"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/main"/>

    <LinearLayout
        android:id="@+id/btm_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        >

        <android.support.v7.widget.CardView
            android:id="@+id/anivsary"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:foreground="?android:attr/selectableItemBackground"
            card_view:cardUseCompatPadding="false"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="1dp"
            android:clickable="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="8dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:scaleType="centerInside"
                    android:src="@drawable/ml"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="12dp"
                    android:textColor="@color/content"
                    android:text="@string/oldy"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/FaceId"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:foreground="?android:attr/selectableItemBackground"
            card_view:cardUseCompatPadding="false"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="1dp"
            android:clickable="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="8dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:scaleType="centerInside"
                    android:src="@drawable/mlml"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="12dp"
                    android:textColor="@color/content"
                    android:text="@string/aspiration"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:foreground="?android:attr/selectableItemBackground"
            card_view:cardUseCompatPadding="false"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="1dp"
            android:clickable="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="8dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:scaleType="centerInside"
                    android:src="@drawable/content"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="12dp"
                    android:textColor="@color/content"
                    android:text="@string/call"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:foreground="?android:attr/selectableItemBackground"
            card_view:cardUseCompatPadding="false"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="1dp"
            android:clickable="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="8dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:scaleType="centerInside"
                    android:src="@drawable/mlmlmlml"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="12dp"
                    android:textColor="@color/content"
                    android:text="@string/come"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <Button
        android:id="@+id/btn_sbg"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/sbg"
        android:layout_below="@id/btm_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        />

</RelativeLayout>